fixed the links so the text would wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@
 .bold-links {
     text-decoration: underline;
     font-weight: bold;
+    word-wrap:break-word;
 
 }
 
